<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="20dp"
            android:text="@string/client_last_name_label"
    />

    <EditText
            android:id="@+id/last_name_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/client_last_name_placeholder"
            tools:ignore="LabelFor"
            android:background="@android:drawable/edit_text"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/client_first_name_label"
    />

    <EditText
            android:id="@+id/first_name_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/client_first_name_placeholder"
            tools:ignore="LabelFor"
            android:background="@android:drawable/edit_text"
    />

    <CheckBox
            android:id="@+id/new_client_checkbox"
            android:text="@string/new_client_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
    />

    <Button
            android:id="@+id/connect_button"
            android:text="@string/connection_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
    />
</LinearLayout>